--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	</div>
 		<nav>
 			<ul>
-				<li class="home" ><a href="http://lueckert.github.io/">Portfolio</a></li>
-				<li class="portfolio" ><a href="http://lueckert.github.io/p1-bio/">Bio</a></li>
-				<li class="resume" ><a href="http://lueckert.github.io/resume-p2/">R&#x000E9;sum&#x000E9;</a></li>
+				<li class="home" ><a href="http://lueckert.github.io/">Home</a></li>
+				<li class="portfolio" ><a href="http://lueckert.github.io/portfolio-bio/">About</a></li>
+				<li class="resume" ><a href="http://lueckert.github.io/portfolio-resume/">R&#x000E9;sum&#x000E9;</a></li>
 			</ul>
 		</nav>	
 </header>
