--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	</div>
 		<nav>
 			<ul>
-				<li class="home" ><a href="http://lueckert.github.io/">Portfolio</a></li>
-				<li class="portfolio" ><a href="http://lueckert.github.io/p1-bio/">Bio</a></li>
-				<li class="resume" ><a href="http://lueckert.github.io/resume-p2/">R&#x000E9;sum&#x000E9;</a></li>
+				<li class="home" ><a href="http://lueckert.github.io/">Home</a></li>
+				<li class="portfolio" ><a href="http://lueckert.github.io/portfolio-bio/">About</a></li>
+				<li class="resume" ><a href="http://lueckert.github.io/portfolio-resume/">R&#x000E9;sum&#x000E9;</a></li>
 			</ul>
 		</nav>	
 </header>
@@ -36,16 +36,7 @@
 
 
     <ul class="gallery-portfolio">
-      
-    <!-- Column 1 Head --> 
-    <li id="intro"><h2>The Easterner</h2></li>
 
-     <!-- Column 2 Head --> 
-    <li id="intro"><h2>Laura Jones Photography</h2></li>
-
-<!-- Column 3 Head --> 
-    <li id="intro"><h2>Design work</h2></li>
-     <!-- IMG 1  -->
 
       <li>
 				      <!-- thumbnail image wrapped in a link -->
@@ -202,14 +193,13 @@
 				  <img src="img/img12.jpg">
 				</a>
 	<!-- END IMG 12  -->
-  <li> <p>credit: Bram De Haan-codepen.io/atelierbram, Gregory Schier-codepen.io/gschier, Nate Nevins-codepen.io/Nate_Nevins </p></li>
-    </ul><!-- .gallery-portfolio -->
+      </ul><!-- .gallery-portfolio -->
 
   </div><!-- .wide -->
 
 </div><!-- .site -->
+<p>credit: Bram De Haan-codepen.io/atelierbram, Gregory Schier-codepen.io/gschier, Nate Nevins-codepen.io/Nate_Nevins </p>
 
-	
 
 <!-- additional links -->
 	<section class="grid_12">
