--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   </div><!-- .wide -->
 
 </div><!-- .site -->
-<p>credit: Bram De Haan-codepen.io/atelierbram, Gregory Schier-codepen.io/gschier, Nate Nevins-codepen.io/Nate_Nevins </p>
+<p class="grid_12">credit: Bram De Haan-codepen.io/atelierbram, Gregory Schier-codepen.io/gschier, Nate Nevins-codepen.io/Nate_Nevins </p>
 
 
 <!-- additional links -->
