added class to li gallery

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 <article class="grid_12">
 	<div class="site">
  
-<div class="entry-content wide">
+
 
 
     <ul class="gallery-portfolio">
 
 
-      <li>
+      <li class="thumbnail">
 				      <!-- thumbnail image wrapped in a link -->
 			<a href="#img1">
 			  <img src="img/img1_thumb.jpg">
@@ -52,7 +52,7 @@
 	
      
      <!-- IMG 2  -->  
-      <li>
+      <li class="thumbnail">
 				      <!-- thumbnail image wrapped in a link -->
 			<a href="#img2">
 			  <img src="img/img2_thumb.jpg">
@@ -65,7 +65,7 @@
 	 <!-- END IMG 2  -->		
 
 	<!-- IMG 3  -->  
-	      <li>
+	      <li class="thumbnail">
 					      <!-- thumbnail image wrapped in a link -->
 				<a href="#img3">
 				  <img src="img/img3_thumb.jpg">
@@ -78,7 +78,7 @@
 	<!-- END IMG 3  -->	    
 
 	<!-- IMG 4  -->  
-	      <li>
+	      <li class="thumbnail">
 					      <!-- thumbnail image wrapped in a link -->
 				<a href="#img4">
 				  <img src="img/img4_thumb.jpg">
@@ -91,7 +91,7 @@
 	<!-- END IMG 4  -->	  
 
 	<!-- IMG 5  -->  
-	      <li>
+	      <li class="thumbnail">
 					      <!-- thumbnail image wrapped in a link -->
 				<a href="#img5">
 				  <img src="img/img5_thumb.jpg">
@@ -104,7 +104,7 @@
 	<!-- END IMG 5  -->
 
 	<!-- IMG 6  -->  
-	      <li>
+	      <li class="thumbnail">
 					      <!-- thumbnail image wrapped in a link -->
 				<a href="#img6">
 				  <img src="img/img6_thumb.jpg">
@@ -117,7 +117,7 @@
 	<!-- END IMG 6  -->
 
 	<!-- IMG 7  -->  
-	      <li>
+	      <li class="thumbnail">
 					      <!-- thumbnail image wrapped in a link -->
 				<a href="#img7">
 				  <img src="img/img7_thumb.jpg">
@@ -130,7 +130,7 @@
 	<!-- END IMG 7  -->
 
 	<!-- IMG 8  -->  
-	      <li>
+	      <li class="thumbnail">
 					      <!-- thumbnail image wrapped in a link -->
 				<a href="#img8">
 				  <img src="img/img8_thumb.jpg">
@@ -143,7 +143,7 @@
 	<!-- END IMG 8  -->
 
 	<!-- IMG 9  -->  
-	      <li>
+	      <li class="thumbnail">
 					      <!-- thumbnail image wrapped in a link -->
 				<a href="#img9">
 				  <img src="img/img9_thumb.jpg">
@@ -156,7 +156,7 @@
 	<!-- END IMG 9  -->
 
 	<!-- IMG 10  -->  
-	      <li>
+	      <li class="thumbnail">
 					      <!-- thumbnail image wrapped in a link -->
 				<a href="#img10">
 				  <img src="img/img10_thumb.jpg">
@@ -169,7 +169,7 @@
 	<!-- END IMG 10  -->
 
 		<!-- IMG 11  -->  
-	      <li>
+	      <li class="thumbnail">
 				<!-- thumbnail image wrapped in a link -->
 				<a href="#img11">
 				  <img src="img/img11_thumb.jpg">
@@ -182,7 +182,7 @@
 	<!-- END IMG 11  -->
 
 		<!-- IMG 12  -->  
-	      <li>
+	      <li class="thumbnail">
 					      <!-- thumbnail image wrapped in a link -->
 				<a href="#img12">
 				  <img src="img/img12_thumb.jpg">
